ipc/ipdl/test/ipdl/error/messageNoDirection.ipdl
//error: missing message direction

[ChildProc=any]
protocol messageNoDirection {
    async NoDirection();
};
